--- a/ClubsApp/Base.lproj/Main.storyboard
+++ b/ClubsApp/Base.lproj/Main.storyboard
@@ -1,24 +1,89 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ClubsApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Jo3-dl-4rv">
+                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Zf-nu-cej">
+                                        <rect key="frame" x="16" y="174" width="361" height="20.333333333333343"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5mi-V9-PbR">
+                                                <rect key="frame" x="0.0" y="0.0" width="361" height="20.333333333333332"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jka-RE-FBm">
+                                        <rect key="frame" x="16" y="120" width="361" height="34"/>
+                                        <subviews>
+                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="jnjk" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xXk-kh-bsn">
+                                                <rect key="frame" x="0.0" y="0.0" width="180.66666666666666" height="34"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="djkfnjkfd" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EhE-wE-4Uc">
+                                                <rect key="frame" x="180.66666666666663" y="0.0" width="180.33333333333337" height="34"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="xXk-kh-bsn" firstAttribute="leading" secondItem="jka-RE-FBm" secondAttribute="leading" id="0m3-4X-bDT"/>
+                                            <constraint firstItem="xXk-kh-bsn" firstAttribute="top" secondItem="jka-RE-FBm" secondAttribute="top" id="8qr-ll-TUk"/>
+                                            <constraint firstAttribute="trailing" secondItem="xXk-kh-bsn" secondAttribute="trailing" multiplier="2" id="Nt1-BB-uxB"/>
+                                            <constraint firstAttribute="bottom" secondItem="xXk-kh-bsn" secondAttribute="bottom" id="Qjk-L1-nD1"/>
+                                            <constraint firstItem="EhE-wE-4Uc" firstAttribute="leading" secondItem="xXk-kh-bsn" secondAttribute="trailing" id="WV2-a0-IOz"/>
+                                        </constraints>
+                                    </stackView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="2Zf-nu-cej" firstAttribute="leading" secondItem="xbb-1T-6IH" secondAttribute="leading" constant="16" id="7N7-rz-fnY"/>
+                                    <constraint firstItem="2Zf-nu-cej" firstAttribute="top" secondItem="jka-RE-FBm" secondAttribute="bottom" constant="20" id="9ra-6y-z8p"/>
+                                    <constraint firstItem="xbb-1T-6IH" firstAttribute="trailing" secondItem="jka-RE-FBm" secondAttribute="trailing" constant="16" id="DXq-Jp-T9E"/>
+                                    <constraint firstItem="jka-RE-FBm" firstAttribute="top" secondItem="xbb-1T-6IH" secondAttribute="top" constant="120" id="FvQ-Y9-SFg"/>
+                                    <constraint firstItem="jka-RE-FBm" firstAttribute="leading" secondItem="xbb-1T-6IH" secondAttribute="leading" constant="16" id="HF5-QB-sGW"/>
+                                    <constraint firstItem="xbb-1T-6IH" firstAttribute="trailing" secondItem="2Zf-nu-cej" secondAttribute="trailing" constant="16" id="ugv-U2-Huu"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="RS8-AQ-Fgf"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="xbb-1T-6IH"/>
+                            </scrollView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Jo3-dl-4rv" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="DDX-cO-PCh"/>
+                            <constraint firstItem="Jo3-dl-4rv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="SIh-lP-5tY"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Jo3-dl-4rv" secondAttribute="trailing" id="WoU-UP-gtN"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Jo3-dl-4rv" secondAttribute="bottom" id="txc-QY-24A"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="135.1145038167939" y="3.5211267605633805"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
