tableview cells design improved

--- a/ClubsApp/Base.lproj/Main.storyboard
+++ b/ClubsApp/Base.lproj/Main.storyboard
@@ -17,24 +17,28 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Bul-Ae-eAG">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="p6P-lj-2mF">
                                 <rect key="frame" x="0.0" y="59" width="393" height="759"/>
-                                <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Uwx-yi-O7u">
-                                        <rect key="frame" x="0.0" y="0.0" width="393" height="759"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                </subviews>
-                            </stackView>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="gwS-5P-6Mf">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gwS-5P-6Mf" id="N5K-dC-7iV">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Bul-Ae-eAG" secondAttribute="trailing" id="FTE-ea-0CT"/>
-                            <constraint firstItem="Bul-Ae-eAG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="FZd-69-Wqp"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Bul-Ae-eAG" secondAttribute="bottom" id="ZRx-SL-BQ6"/>
-                            <constraint firstItem="Bul-Ae-eAG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="bky-3N-WXW"/>
+                            <constraint firstItem="p6P-lj-2mF" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="1RP-dC-V6i"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="p6P-lj-2mF" secondAttribute="trailing" id="CXo-qu-282"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="p6P-lj-2mF" secondAttribute="bottom" id="R1a-2O-54a"/>
+                            <constraint firstItem="p6P-lj-2mF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="SEE-Q8-fbe"/>
                         </constraints>
                     </view>
                 </viewController>
