--- a/ClubsApp/Base.lproj/Main.storyboard
+++ b/ClubsApp/Base.lproj/Main.storyboard
@@ -17,35 +17,32 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gb6-qJ-bgR">
-                                <rect key="frame" x="0.0" y="59" width="393" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="ldr-2D-WeK"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uvu-qY-Kpf">
-                                <rect key="frame" x="0.0" y="787" width="393" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="mep-5Q-ZbD"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="bhm-Hn-jgr">
+                                <rect key="frame" x="134" y="423" width="41.333333333333336" height="50.333333333333314"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="allEventsTabBar" translatesAutoresizingMaskIntoConstraints="NO" id="SGb-sM-wzU">
+                                        <rect key="frame" x="0.0" y="0.0" width="41.333333333333336" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="30" id="Cp5-TT-1zM"/>
+                                            <constraint firstAttribute="height" constant="30" id="T5L-gk-fG7"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="efj-8v-sFL">
+                                        <rect key="frame" x="0.0" y="30" width="41.333333333333336" height="20.333333333333329"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="Gb6-qJ-bgR" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="0gY-sB-oAC"/>
-                            <constraint firstItem="Uvu-qY-Kpf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="3km-Rw-2O6"/>
-                            <constraint firstItem="Gb6-qJ-bgR" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="6jG-IU-9n7"/>
-                            <constraint firstItem="Uvu-qY-Kpf" firstAttribute="top" secondItem="Gb6-qJ-bgR" secondAttribute="bottom" priority="250" constant="100" id="Lq6-hQ-YD8"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Uvu-qY-Kpf" secondAttribute="bottom" constant="10" id="PXo-2T-WGb"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Uvu-qY-Kpf" secondAttribute="trailing" id="QKB-Yg-ww4"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Gb6-qJ-bgR" secondAttribute="trailing" id="pLa-r4-iXw"/>
+                            <constraint firstItem="bhm-Hn-jgr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="8c2-kd-0vl"/>
+                            <constraint firstItem="bhm-Hn-jgr" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="aY7-gK-4zS"/>
+                            <constraint firstItem="bhm-Hn-jgr" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="jEU-nH-3Dq"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="bhm-Hn-jgr" secondAttribute="trailing" constant="10" id="m0s-Md-AQ1"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -55,6 +52,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="allEventsTabBar" width="25" height="25"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
